Added bootswatch theme and new projects

--- a/ShalilBookStore.csproj
+++ b/ShalilBookStore.csproj
@@ -13,6 +13,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ShalilsBooks.DataAccess\ShalilsBooks.DataAccess.csproj" />
+    <ProjectReference Include="..\ShalilsBooks.Models\ShalilsBooks.Models.csproj" />
+    <ProjectReference Include="..\ShalilsBooks.Utility\ShalilsBooks.Utility.csproj" />
   </ItemGroup>
 
 </Project>
